The GameField class no longer has a BlockSet to play the Moves on. Instead each Game class holds a GameField object and can pass a BlockSet onto it.